@@ -316,6 +316,10 @@ SCSI commands with 10 byte cdbs. When this option is given the 6 byte cdb
 variants are used. RBC and old SCSI devices may need this option. This
 utility outputs a suggestion to use this option if the SCSI status indicates
 that the 10 byte cdb variant is not supported.
+.br
+The SPC\-4 standard (and SPC\-5 drafts) include a note stating that
+implementers migrate away from the SCSI MODE SELECT(6) and MODE SENSE(6)
+commands in favour of the 10 byte variants (e.g.  MODE SEMSE(10)).
 .TP
 \fB\-t\fR, \fB\-\-transport\fR=\fITN\fR
 Specifies the transport protocol where \fITN\fR is either a number in
